9-install-gitlab-registry/registry-vs-endpoint.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "registry"
spec:
  ports:
    - name: "registry"
      protocol: "TCP"
      port: 8189
      targetPort: 8189
      nodePort: 0
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "registry"
subsets:
  - addresses:
      - ip: "192.168.1.26"
    ports:
      - port: 8189
        name: "registry"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry-vs
spec:
  hosts:
    - "registry.local.k8s.com"
  gateways:
    - "istio-system/local-k8s-gateway"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: registry
            port:
              number: 8189
